src/styles/partials/_homepage-hero.scss
.homepage-hero {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 110px;
    position: relative;
    max-height: 1000px;

    @media screen and (max-width: 1023px) {
        padding-top: 50px;
        height: 80vh;
    }

    @media screen and (max-width: 767px) {
        padding-top: 0;
        height: fit-content;
        margin: 120px 0;
    }

    &_backgroud-line {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 2;
        width: 100vw;
    }

    &_inner {
        max-width: 917px;
        display: flex;
        flex-direction: column;
        align-items: center;
        position: relative;
        z-index: 3;

        @media screen and (max-width: 1023px) {
            max-width: 700px;
        }
    }

    &_icon {
        &:first-of-type {
            margin: 0 auto 18px 0;
            width: 21px;
            height: 24px;

            @media screen and (max-width: 600px) {
                position: relative;
                left: -20px;
            }

            @media screen and (max-width: 355px) {
                position: relative;
                left: 0;
            }
        }

        &:last-of-type {
            margin-left: auto;
            width: 30px;
            height: 23.5px;

            @media screen and (max-width: 600px) {
                position: relative;
                left: 20px;
            }

            @media screen and (max-width: 355px) {
                position: relative;
                left: 0;
            }
        }
    }

    &_badge {
        padding: 12px 22px;
        color: #b8b8b8;
        font-size: 14px;
        line-height: 14px;
        text-align: center;
        width: fit-content;
        border-radius: 99px;
        background: rgba(255, 255, 255, 0.06);
    }

    &_text {
        background: linear-gradient(
            90deg,
            #ffffff 0%,
            rgba(255, 255, 255, 0.81) 100%
        );
        background-clip: text;
        -webkit-background-clip: text;
        color: transparent;
        width: 748px;
        font-size: 90px;
        line-height: 100px;
        font-weight: 600;
        margin: 22px auto 58px;
        text-align: center;

        @media screen and (max-width: 1023px) {
            font-size: 60px;
            line-height: 66px;
            width: 100%;
        }

        @media screen and (max-width: 600px) {
            font-size: 40px;
            line-height: 45px;
            margin: 24px auto 40px;
        }

        > span {
            background: linear-gradient(90deg, #bcb7ff 0%, #703ab4 100%);
            background-clip: text;
            -webkit-background-clip: text;
            color: transparent;

            @media screen and (max-width: 1023px) {
                &:first-of-type {
                    display: block;
                }
            }
        }
    }
}

